# spice

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: config.cmake.in
